--- a/kleding.html
+++ b/kleding.html
@@ -106,7 +106,7 @@
 <li>zwarte leren/Canvas balletschoenen</li>
 </ul>
 </section><section><h1 id="ballet-volwassenen">Ballet volwassenen</h1>
-<p><img src="resources/image/algemeen/KLassiekballettieners.jpg" alt="Kleding voorschrift Babs Balletschool"></p>
+<p><img src="resources/image/algemeen/Klassiekballet%20volwassenen.JPG" alt="Kleding voorschrift Babs Balletschool"></p>
 <ul>
 <li>Zwart Balletpak</li>
 <li>Zwarte legging of roze/zwarte panty.</li>
@@ -140,7 +140,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#x62;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#97;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#97;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
