--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ We kijken weer naar jullie uit! </p>
 Informatie volgt zodra we meer weten. </p>
 </section><section><h1 id="kleding-voorschrift-inschrijven-bij-babs-balletschool">Kleding voorschrift <img src="resources/image/algemeen/balletkapstok.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>Om goed te kunnen dansen heb je ook de juiste kleding nodig. 
-Kijk welk kleding voorschrift voor jouw les van toepassing is. Bij Podium-Nijmegen vind je alles wat je nodig hebt, daar is momenteel een grote opruiming dus sla je slag! </p>
+Kijk welk kleding voorschrift voor jouw les van toepassing is. Bij Podium-Nijmegen vind je alles wat je nodig hebt, daar is momenteel een grote opruiming dus sla je slag!
+Tijdens onze Open Dag zijn er ook t-shirts van de balletschool en 2e hands balletkleding te koop.  </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
