--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ Verschillende culturele organisaties uit de omgeving laten zien wat ze te bieden
 Daarnaast zijn er optredens van Dik en Pier, is er lekkers van JaTaart! en kunnen kinderen zich laten schminken, zich verkleden of toneelspelen als de mooiste en spannendste sprookjesfiguren.</p>
 <p>Kom ook cultuur snuiven!  </p>
 <p><strong>Programma Open Dag Babs Balletschool in studio:</strong> 
-11:00:  kijk les Modern volw(repetitie)V
-12:00:  jazzballet 8+ 
-13:00   buikdans 8+ 
-14:00   kleuterballet 4-5 
-15:00   moderne dans 8+
-16:00   pilates volw.</p>
+11:00:  kijk les Modern volw(repetitie)</p>
+<p>12:00:  jazzballet 8+ </p>
+<p>13:00   buikdans 8+ </p>
+<p>14:00   kleuterballet 4-5 </p>
+<p>15:00   moderne dans 8+</p>
+<p>16:00   pilates volw.</p>
 <p><strong>Presentaties in theaterzaal om: 11:00, 12:30, 13:30 en 14:30.</strong> </p>
 <ul>
 <li><a href="https://theaterdekik.nl/nieuws/opening-seizoen-22-23/">Programma Buiten </a> </li>
