--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
