--- a/dansproject.html
+++ b/dansproject.html
@@ -35,9 +35,9 @@
             <div class="where"><span>dansproject</span></div>
             <section><h1 id="dansproject">Dansproject</h1>
 <p><img src="resources/image/algemeen/Werelddans-Project.JPG" alt="dansproject"></p>
-<p>Sarah Döker heeft zich gespecialisserd in Werelddans. Met haar dansen leerlingen de wereld rond met dans folklore uit verschillende landen. Er is aandacht voor houding , muzikaliteit, expressie en samenwerking. Ook wordt gewerkt aan verschillende choreografieën.
+<p>Sarah Döker heeft zich gespecialisserd in Werelddans. Haar lessen combineert zij werelddans met klassiek en moderne techniek. Er is aandacht voor houding , muzikaliteit, expressie, compositie en samenwerking. Ook wordt gewerkt aan verschillende choreografieën.
 Laat je verrassen door deze dansstijl! 
-In het rooster bieden we een project aan in de loop van seizoen 22/23 op de zaterdagen in een blok uur van 14:00-16:00.
+op de zaterdagen in een blok uur van 14:00-16:00. 10 &amp; 19 december
 voor info kun je mailen naar <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section>
         </main>
