--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ instromen is nog mogelijk! </p>
 Ook via Sjors Sportief zullen er kinderen aansluiten in de lessen voor een proefles. </p>
 </section><section><h1 id="project-burlesque-inschrijven-bij-babs-balletschool">Project Burlesque <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>Op zaterdagen 14, 21 en 28 januari dansen we een super tof dansproject  &quot; Burlesque (3 weken) van 15:00-16:00 (inmiddels al gestart maar instromen is nog mogelijk!)
-Dit project wordt gegeven door Eline Kohfel en zij zal samen met de deelnemers (vanaf 18 jaar) een choreografie maken, ultiem vrouwelijk en vol passie. Durf blij te zijn met je eigen lichaam en dans met je hart!<br>Kosten zijn €98,-voor 1 Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
+Dit project wordt gegeven door Eline Kohfel en zij zal samen met de deelnemers (vanaf 18 jaar) een choreografie maken, ultiem vrouwelijk en vol passie. Durf blij te zijn met je eigen lichaam en dans met je hart!<br>Kosten zijn €98,- Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
 Inschrijven kan via de mail of een briefje in de studio.
 Meldt je snel aan! </p>
 </section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
