--- a/kleding.html
+++ b/kleding.html
@@ -139,7 +139,7 @@
 <p>*evt. personalized met je eigen naam voor €2,50 extra.</p>
 <p>evt is ook te bestellen; cropped shirts/legging/ tshirt lange mouw.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#x61;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#108;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
