--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#110;&#108;">&#98;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#x6f;&#111;&#108;&#46;&#110;&#108;">&#98;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#x6f;&#111;&#108;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
