--- a/wanneer.html
+++ b/wanneer.html
@@ -34,15 +34,10 @@
         <main class="">
             <div class="where"><span>wanneer</span></div>
             <section><h1 id="rooster--jaarplanner--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanner:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
-<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> (het rooster 22-23 komt binnenkort online)</p>
+<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> </p>
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
-<p>2021-2022</p>
-<p> <strong>Diploma lessen</strong>        11 t/m 15 juli 2022<br>(Oudste kleuters uit K1 en oudste kinder groep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
-<p><strong>Zomervakantie</strong>         vanaf 18 juli 2022<br>(in de vakantie zijn er geen lessen)</p>
-<h1 id="jaarplannervrije-dagen-2022-2023">Jaarplanner/vrije dagen 2022-2023:</h1>
-<p><img src="resources/image/algemeen/balletvakantie.jpg" alt="Vakantie Babs Balletschool?">  </p>
-<p><strong>OpenDag</strong>   zondag 11 september 2022<br>(OpenDag i.s.m. Theater de Kik en All Music, de hele dag gratis workshops &amp; presentaties)</p>
+
 <p><strong>Start seizoen 22-23</strong>    maandag 12 september 2022<br>(1e lessen volgens lesrooster)</p>
 <p><strong>Sjors Sportief weken</strong>   17 t/m 21 oktober 2022
 (via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
@@ -54,9 +49,9 @@
 <p> <strong>Carnavalsvakantie</strong>    20 februari t/m 25 februari 2023<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Paasdag</strong>            maandag 10 april 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Koningsdag</strong>            donderdag 27 april 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Meivakantie</strong>            1 t/m 13 mei 2022<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>Hemelvaartsdag</strong>         18 mei 2023
-(dit is een vrije dag, er zijn geen lessen) </p>
+<p><strong>Meivakantie</strong>            1 t/m 5 mei 2023<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Hemelvaart</strong>         18 &amp; 19 mei 2023
+(er zijn dan geen lessen) </p>
 <p><strong>2e Pinksterdag</strong>        maandag 29 mei 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Grote voorstelling Schouwburg Arnhem</strong> zaterdag 1 juli 2023</p>
 <p><strong>Orientatie week</strong>      3 t/m 7 juli 2023<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
