--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#x6c;&#x6c;&#x65;&#116;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#x2e;&#110;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#x6c;&#x6c;&#x65;&#116;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#x2e;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
