--- a/wanneer.html
+++ b/wanneer.html
@@ -33,11 +33,11 @@
         </header>
         <main class="">
             <div class="where"><span>wanneer</span></div>
-            <section><h1 id="rooster--jaarplanner--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanner:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
-<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> </p>
+            <section><h1 id="rooster--jaarplanning--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanning:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
+<p>Het <strong>dansrooster:</strong> </p>
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
-
+<p><strong>Jaarplanning:</strong></p>
 <p><strong>Start seizoen 22-23</strong>    maandag 12 september 2022<br>(1e lessen volgens lesrooster)</p>
 <p><strong>Sjors Sportief weken</strong>   17 t/m 21 oktober 2022
 (via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
