--- a/dansproject.html
+++ b/dansproject.html
@@ -33,11 +33,12 @@
         </header>
         <main class="">
             <div class="where"><span>dansproject</span></div>
-            <section><h1 id="dansproject">Dansproject</h1>
-<p><img src="resources/image/algemeen/Werelddans-Project.JPG" alt="dansproject"></p>
-<p>Sarah Döker heeft zich gespecialisserd in Werelddans. Haar lessen combineert zij werelddans met klassiek en moderne techniek. Er is aandacht voor houding , muzikaliteit, expressie, compositie en samenwerking. Ook wordt gewerkt aan verschillende choreografieën.
-Laat je verrassen door deze dansstijl! 
-op de zaterdagen in een blok uur van 14:00-16:00. 10 &amp; 19 december
+            <section><h1 id="dans-project-burlesque">Dans Project Burlesque</h1>
+<p><img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool">
+Op zaterdagen 14, 21 en 28 januari dansen we een super tof dansproject &quot; Burlesque (3 weken) van 15:00-16:00 (inmiddels al gestart maar instromen is nog mogelijk!)
+Dit project wordt gegeven door Eline Kofehl en zij zal samen met de deelnemers (vanaf 18 jaar) een choreografie maken, ultiem vrouwelijk en vol passie. Durf blij te zijn met je eigen lichaam en dans met je hart!<br>Kosten zijn €98,- Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
+Inschrijven kan via de mail of een briefje in de studio.
+Meldt je snel aan! 
 voor info kun je mailen naar <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section>
         </main>
