--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#x2e;&#110;&#x6c;">&#98;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#x2e;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#108;">&#x62;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
