--- a/hoeveel.html
+++ b/hoeveel.html
@@ -55,14 +55,15 @@
 <table>                            **leerlingen:**              
 <tr><td>Korte cursus (12 lessen) t/m 17 jaar:</td><td>€  96,-</td></tr>
 <tr><td>Korte cursus (12 lessen) vanaf 18 jaar:</td><td>€ 146,-</td></tr>
-</table>
-                                  **niet-leerlingen** 
-                                  t/m 17 jaar:</td><td>€  103,-</td></tr>
-                                  vanaf 18 jaar:</td><td>€ 153,-</td></tr>
 
+</table>                          **niet-leerlingen** 
+
+<pre><code>                              t/m 17 jaar:&lt;/td&gt;&lt;td&gt;€  103,-&lt;/td&gt;&lt;/tr&gt;
+                              vanaf 18 jaar:&lt;/td&gt;&lt;td&gt;€ 153,-&lt;/td&gt;&lt;/tr&gt;
+</code></pre>
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#108;">&#x62;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;">&#98;&#97;&#x62;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
