--- a/hoeveel.html
+++ b/hoeveel.html
@@ -63,7 +63,7 @@
 </code></pre>
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;">&#98;&#97;&#x62;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
