--- a/index.html
+++ b/index.html
@@ -36,20 +36,14 @@
             <section><h1 id="seizoen-2022-2023-inschrijven-bij-babs-balletschool">Seizoen 2022-2023 <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>Wil je ook een keer ervaren hoe leuk dansen is? Vraag een proefles aan en stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
 instromen is nog mogelijk! </p>
-</section><section><h1 id="open-week-inschrijven-bij-babs-balletschool">Open Week <img src="resources/image/algemeen/Kinderballet.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>van 30 januari t/m 3 februari is het Open Week, geinteresseerden mogen een gratis proefles komen meedoen. 
-Ook via Sjors Sportief zullen er kinderen aansluiten in de lessen voor een proefles. </p>
-</section><section><h1 id="project-burlesque-inschrijven-bij-babs-balletschool">Project Burlesque <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>Op zaterdagen 14, 21 en 28 januari dansen we een super tof dansproject  &quot; Burlesque (3 weken) van 15:00-16:00 (inmiddels al gestart maar instromen is nog mogelijk!)
-Dit project wordt gegeven door Eline Kofehl en zij zal samen met de deelnemers (vanaf 18 jaar) een choreografie maken, ultiem vrouwelijk en vol passie. Durf blij te zijn met je eigen lichaam en dans met je hart!<br>Kosten zijn €98,- Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
-Inschrijven kan via de mail of een briefje in de studio.
-Meldt je snel aan! </p>
+</section><section><h1 id="project-moderne-dans-gevorderd-inschrijven-bij-babs-balletschool">Project Moderne dans gevorderd <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>We hebben weer een volgend dansproject, dit keer Modern gevorderd, Sarah Döker gaat het project verzorgen. 
+Dit project duurt 2 zaterdagen (11 &amp; 25 maart) van 14:00-16:00 (dubbel dansuur!) voor gevorderde dansers en kost totaal  € 50,- voor leerlingen, mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. Ben snel met je inschrijving! 
+Bij voldoende animo gaat het project door. 
+Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#x73;&#64;&#x62;&#97;&#98;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#x6c;">&#x62;&#x61;&#x62;&#x73;&#64;&#x62;&#97;&#98;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#x6c;</a> </p>
 </section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>de tweede nieuwsbrief is in december verstuurd met alle informatie die je moet weten over de balletschool en onze voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
+<p>de 3e nieuwsbrief is in februari verstuurd met alle informatie die je moet weten over de balletschool en onze voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
 Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
-</section><section><h1 id="challenge--inschrijven-bij-babs-balletschool">Challenge  <img src="resources/image/algemeen/Challenge.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>deze maand zit ik 25 jaar in het vak en ik daag je uit je oudste ballet-foto/herinnering met mij te delen! 
-Dit mag via instagram of de mail. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
