--- a/hoeveel.html
+++ b/hoeveel.html
@@ -63,7 +63,7 @@
 </code></pre>
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
