--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ instromen is nog mogelijk! </p>
 <p>We hebben weer een volgend dansproject, dit keer Modern gevorderd, Sarah Döker gaat het project verzorgen. 
 Dit project duurt 2 zaterdagen (11 &amp; 25 maart) van 14:00-16:00 (dubbel dansuur!) voor gevorderde dansers en kost totaal  € 50,- voor leerlingen, mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. 
-Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#98;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#46;&#110;&#108;">&#x62;&#x61;&#98;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#46;&#110;&#108;</a> </p>
+Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#110;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#110;&#x6c;</a> </p>
 </section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>de 3e nieuwsbrief is in februari verstuurd met alle informatie die je moet weten over de balletschool en onze voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
 Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
